Removed future chapters from build

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,13 +1,13 @@
 rmd_files:
   - index.Rmd
   - 02-load_envR.Rmd
-  - 03-object_operator.Rmd
-  - 04-packages_data.Rmd
-  - 05-description.Rmd
-  - 06-distributions.Rmd
-  - 07-loopFOR.Rmd
-  - 08-test.Rmd
-  - 09-regression.Rmd
+#  - 03-object_operator.Rmd
+#  - 04-packages_data.Rmd
+#  - 05-description.Rmd
+#  - 06-distributions.Rmd
+#  - 07-loopFOR.Rmd
+#  - 08-test.Rmd
+#  - 09-regression.Rmd
 
 delete_merged_file: true
 output_dir: "docs"
