--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -3,7 +3,7 @@ rmd_files:
   - 02-load_envR.Rmd
   - 03-object_operator.Rmd
   - 04-packages_data.Rmd
-#  - 05-description.Rmd
+  - 05-description.Rmd
 #  - 06-distributions.Rmd
 #  - 07-loopFOR.Rmd
 #  - 08-test.Rmd
